Navbar collapse in small view fix. Adding shadow to text in hero. Some cleanups

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -50,6 +50,11 @@ section p {
 	background-image: url(../assets/Hero_BgImg.png);
 	margin-top: 51px;
 	padding: 20px 0;
+	color: #fff;
+}
+
+.bg-image h2 {
+	text-shadow: 2px 2px 8px #000;
 }
 
 .iframe-container {
